Added new classes and implementations, fixed logic bugs and modified related classes